# rock-snitch

./: .gitignore  AGENTS.md  Makefile  README.md  download_navcam.py  pyproject.toml  test_download.py
configs/: default.yaml  models.yaml
data/relevant/: NLF_0190_0683808498_362EBY_N0070000NCAM00705_02_0LLJ.json  NLF_0205_0685144010_882EBY_N0071836NCAM01205_01_0LLJ.json  NLF_0395_0702014201_058ECM_N0171064NCAM03395_01_195J.json  NLF_0458_0707589025_870EBY_N0260218SCAM15012_00_0LLJ.json  NLF_0565_0717106257_882ECM_N0290000NCAM00709_01_095J.json  NLF_0645_0724206699_600ECM_N0310856NCAM00501_01_295J.json  NLF_0755_0733967989_005ECM_N0372562NCAM03755_01_195J.json  NLF_0870_0744183716_987ECM_N0422266NCAM03870_07_195J.json  NLF_1110_0765465872_675ECM_N0512578NCAM13109_01_195J.json  NLF_1295_0781895603_496EBY_N0603632SCAM01295_00_0LLJ.json  NLF_1542_0803831393_804ECM_N0760000NCAM00709_01_095J.json  NLF_1700_0817856923_631ECM_N0820000NCAM03700_01_195J.json  NLF_1790_0825848377_395ECM_N0860630NCAM00433_02_095J.json  NRE_0060_0672265209_237ECM_N0032046NCAM00410_00_0LLJ.json  NRF_0340_0697121914_417ECM_N0090364NCAM00420_01_195J.json  NRF_0380_0700686262_301ECM_N0112472NCAM03380_01_195J.json  NRF_0395_0702014201_058ECM_N0171064NCAM03395_01_195J.json  NRF_0395_0702014384_287ECM_N0171064NCAM03395_01_195J.json  NRF_0557_0716393047_912ECM_N0280000NCAM00708_01_085J.json  NRF_0718_0730679543_043ECM_N0342098NCAM03717_01_195J.json  NRF_0755_0733967989_005ECM_N0372562NCAM03755_01_195J.json  README.md  (+9 more)
docs/: DESIGN.md  ROADMAP.md
relevant/: NLF_0395_0702014384_287ECM_N0171064NCAM03395_01_195J.json  NLF_0765_0734862709_190ECM_N0381808NCAM03765_01_195J.json  NLF_0870_0744186600_659ECM_N0422266NCAM02870_01_195J.json  NLF_1110_0765465872_675ECM_N0512578NCAM13109_04_195J.json  NLF_1176_0771330642_883ECM_N0530000NCAM14175_01_195J.json  NLF_1400_0791224654_223ECM_N0660000NCAM00709_04_095J.json  NRF_0575_0717997335_774ECM_N0290000NCAM00709_01_095J.json
scripts/: build_design_figures.py  detect_full.sh  detect_minimal.sh  detect_mono_only.sh  detect_stereo_only.sh  download_models.py  run_smoke.sh  run_ui.sh  setup_env.sh
tests/: conftest.py  test_app.py  test_cli_smoke.py  test_device.py  test_profiles.py
(+87 files in other folders)
